--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ img {
     height: 266px;
     width: 184px;
     margin-top: 5%;
+
 }
 
 .cpucard {
@@ -71,7 +72,7 @@ img {
     height: 266px;
     width: 184px;
     margin-top: 5%;
-    margin-left: 300px;
+    margin-left: 25%;
 
 }
 
