--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ img {
 
 }
 
-.playercard {
+#playercard {
     display: inline-block;
     vertical-align: middle;
     border: 1px solid whitesmoke;
@@ -72,7 +72,7 @@ img {
 
 }
 
-.cpucard {
+#cpucard {
     display: inline-block;
     vertical-align: middle;
     border: 1px solid whitesmoke;
