--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,3 +86,16 @@ img {
 .btn-div {
     margin-top: 50px;
 }
+
+#playerscore {
+    color: green;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+#cpuscore {
+
+    color: red;
+    font-weight: bold;
+    margin-left: 10px;
+}
